dbug/dbug_analyze.c  :  Avoid the unresolved symbol "my_thread_global_init()"                         in a build "--without-server".

Fix for bug#14685